--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port: 4001
+spring.jpa.defer-datasource-initialization= true
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
 
+spring.datasource.url=jdbc:h2:mem:reference-app-db
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.h2.console.enabled=true
